[gd_scene load_steps=5 format=3 uid="uid://ri2usuqo4sqb"]

[ext_resource type="Script" uid="uid://m43mfd0tmiy5" path="res://main/dialog system/dialog_box.gd" id="1_1xb2t"]
[ext_resource type="Texture2D" uid="uid://fcmwxkf730l7" path="res://icon.svg" id="3_sytff"]
[ext_resource type="PackedScene" uid="uid://dul1gov35rdv5" path="res://main/dialog system/text_box.tscn" id="3_wor6i"]
[ext_resource type="PackedScene" uid="uid://bann3gxjbypmf" path="res://main/dialog system/speaker_container.tscn" id="4_1yx8m"]

[node name="DialogBox" type="MarginContainer"]
custom_minimum_size = Vector2(50, 0)
anchors_preset = -1
anchor_left = 0.4125
anchor_top = 0.78333336
anchor_right = 0.5875
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("1_1xb2t")
metadata/_edit_use_anchors_ = true

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("3_sytff")
region_rect = Rect2(8, 8, 16, 16)

[node name="SpeakerContainer" parent="." instance=ExtResource("4_1yx8m")]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_top = 4
theme_override_constants/margin_bottom = 22

[node name="TextBox" parent="." instance=ExtResource("3_wor6i")]
layout_mode = 2
size_flags_vertical = 8
theme_override_constants/margin_left = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 2

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="AutoAdvanceTimer" type="Timer" parent="."]
wait_time = 2.5
one_shot = true

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
[connection signal="timeout" from="AutoAdvanceTimer" to="." method="_on_auto_advance_timer_timeout"]
